2011-07-23  Adam Strzelecki <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h m4/apple.m4:
	OSX support for wxt terminal.  For OSX, switch to using single-threaded
	hybrid GUI & console event loop at wxt_waitforinput().
	Add -framework ApplicationServices to the apple-specific
	configuration flags.

2011-07-23  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* m4/apple.m4:  Replace -laquaterm with -Wl,-framework -Wl,AquaTerm
	which is supposed to make the Macports version of aquaterm install
	properly.

2011-07-22  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/parse.c src/parse.h plot2d.c plot3d.c set.c unset.c command.c:
	Revise iteration-over-plot mechanism to handle edge cases of nested
	iteration correctly.

2011-07-20  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Point types 10 and 11 were upside down.
	Bug #3368877

	* fill paths now have a pensize > 0 to have slight overlap of tiles to
	avoid rendering artifacts

	* path building was broken and showed interrupted lines on certain plots
	e.g. plot '+' u 1:($1**2):($1**2) with lines palette lw 3 title '$x^2$'

	* a new terminal option (tightboundingbox|notightboundingbox) is added

2011-07-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Allow binary data for plot style fillsteps
	Bug #3371199

	* term/gd.trm:  Prevent infinite loop on unrecognized terminal option

2011-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes):  Correct positioning of bars in clustered
	histograms when some values are missing.
	Bug #3360882

	* src/datafile.c (df_open plot_option_using df_readascii f_column)
	src/datafile.h src/parse.c (create_call_column_at extend_at) src/parse.h
	src/eval.c src/eval.h src/plot2d.c src/plot3d.c docs/gnuplot.doc:

	Implement column selection based on matching a leading substring of the
	column header.
	    plot 'foo' using (column("A")):(column("B"))
	    plot 'foo' using "A":"B"